--- a/index.html
+++ b/index.html
@@ -17,7 +17,15 @@
         />
       </head>
 <body>
-    
+    <!-- Navbar  -->
+    <!-- Hero Section --> 
+    <!-- About Section -->
+    <!-- Project Section -->
+    <!-- Skills Section -->
+    <!-- Resume Section -->
+    <!-- Contact Section -->
+    <!-- Footer Section -->
+    <!-- Scripts -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
