added the hreo section the profile picture and also a button that links the user to my projects. Still have to do the css for the hero section

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <!-- Home Icon -->
             <a href="#" class="navbar-brand"><i class="fas fa-home fa-lg"></i></a>
             <!-- Hamburger Menu -->
-            <button class="navbar-toggle" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <!-- Navbar Items -->
@@ -39,6 +39,17 @@
         </div>
      </nav>
     <!-- Hero Section --> 
+     <header class="hero">
+        <div class="hero-overlay"></div>
+        <div class="hero-content text-center">
+            <img src="./img/profile.jpg" alt="Rodd Azad" class="img-fluid shadow-lg mb-3 profile-img">
+            <h1 class="display-4">Rodd Azad | Full-stack Developer & Innovator</h1>
+            <p class="lead">Building Scalable & Intelligent Web Solutions</p>
+            <button class="btn btn-outline-info" type="button">
+                <a href="#projects" class="navlink">See my Projects</a>
+            </button>
+        </div>
+     </header>
     <!-- About Section -->
     <!-- Project Section -->
     <!-- Skills Section -->
