completed the about section I will probably have to change the text as needed.

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         />
       </head>
 <body>
+
     <!-- Navbar  -->
      <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container">
@@ -38,6 +39,7 @@
             </div>
         </div>
      </nav>
+
     <!-- Hero Section --> 
      <header class="hero">
         <div class="hero-overlay"></div>
@@ -46,11 +48,46 @@
             <h1 class="display-4">Rodd Azad | Full-stack Developer & Innovator</h1>
             <p class="lead">Building Scalable & Intelligent Web Solutions</p>
             <button class="btn btn-outline-info" type="button">
-                <a href="#projects" class="navlink">See my Projects</a>
+                <a href="#projects" class="nav-link">See my Projects</a>
             </button>
         </div>
      </header>
+
     <!-- About Section -->
+     <section class="py-5 bg-dark text-light">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-12">
+                <h2 class="display-5 fw-bold text-center">About Me</h2>
+                <p class="lead">
+                    I'm Rodd Azad, a results-driven
+                    <strong>Frontend Developer & Innovator</strong> with a solid
+                    background in software engineering, web development, and
+                    operations management. With over five years of experience in web
+                    technologies and AI integration, I specialize in building
+                    scalable, intelligent web solutions that enhance user experience
+                    and efficiency.
+                </p>
+                <p>
+                    My journey started in <strong>Operations Management</strong>,
+                    leading teams and optimizing workflows. Transitioning into tech, I
+                    founded <strong>Coded Pro</strong>, a web development company
+                    focused on scalable digital solutions. Now, I leverage my
+                    technical expertise and leadership skills to develop impactful web
+                    applications.
+                  </p>
+                  <div class="text-center"><a
+                    href="./other/rodd-resume.pdf"
+                    class="btn btn-outline-info mt-3"
+                    target="_blank"
+                  >
+                    Download Resume
+                  </a>
+                </div>
+            </div>
+        </div>  
+        </div>
+     </section>
     <!-- Project Section -->
     <!-- Skills Section -->
     <!-- Resume Section -->
