took care of the html part of the carousels and now I only need to do final touches on css

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <h2 class="display-5 fw-bold text-center">About Me</h2>
                 <p class="lead">
                     I'm Rodd Azad, a results-driven
-                    <strong>Frontend Developer & Innovator</strong> with a solid
+                    <strong>Full-stack Developer & Innovator</strong> with a solid
                     background in software engineering, web development, and
                     operations management. With over five years of experience in web
                     technologies and AI integration, I specialize in building
@@ -88,7 +88,119 @@
         </div>  
         </div>
      </section>
+
     <!-- Project Section -->
+     <section class="py-5 bg-dark text-light">
+        <div class="container">
+            <h2 class="display-5 fw-bold text-center mb-4">Projects</h2>
+            <div id="projectsCarousel" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <!-- Project 1 -->
+                     <div class="carousel-item">
+                        <div class="card bg-secondary text-light shadow-lg">
+                            <img src="./img/movietime.png" alt="Movie lookup project" class="card-img-top">
+                            <div class="card-body text-center">
+                                <h5 class="card-title">Movie Time</h5>
+                                <p class="card-text">Search for movies and instantly access information,
+                                    including cast, reviews, and plot details.</p>
+                                    <a href="https://github.com/vanwykkim/movie-lookup" class="btn btn-outline-info" target="blank"> View Code</a>
+                                    <a href="https://vanwykkim.github.io/movie-lookup/" class="btn btn-outline-light" target="_blank"> Live Demo</a>
+                            </div>
+                        </div>
+                     </div>
+                     <!-- Project 2 -->
+            <div class="carousel-item">
+                <div class="card bg-secondary text-light shadow-lg">
+                  <img
+                    src="./img/hero.png"
+                    class="card-img-top"
+                    alt="Piano Lesson Project"
+                  />
+                  <div class="card-body text-center">
+                    <h5 class="card-title">Piano Lesson</h5>
+                    <p class="card-text">
+                      A dedicated website promoting piano lessons for students of
+                      all levels.
+                    </p>
+                    <a
+                      href="https://codesandbox.io/p/sandbox/nrvggr"
+                      class="btn btn-outline-info"
+                      target="_blank"
+                      >View Code</a
+                    >
+                    <a
+                      href="https://nrvggr.csb.app/index.html"
+                      class="btn btn-outline-light"
+                      target="_blank"
+                      >Live Demo</a
+                    >
+                  </div>
+                </div>
+              </div>
+  
+              <!-- Project 3 -->
+              <div class="carousel-item">
+                <div class="card bg-secondary text-light shadow-lg">
+                  <img
+                    src="./img/shopping.png"
+                    class="card-img-top"
+                    alt="ShopEase Project"
+                  />
+                  <div class="card-body text-center">
+                    <h5 class="card-title">ShopEase</h5>
+                    <p class="card-text">
+                      A hassle-free shopping experience with secure, effortless
+                      browsing.
+                    </p>
+                    <a
+                      href="https://codesandbox.io/p/sandbox/mks5nx"
+                      class="btn btn-outline-info"
+                      target="_blank"
+                      >View Code</a
+                    >
+                    <a
+                      href="https://mks5nx.csb.app/index.html"
+                      class="btn btn-outline-light"
+                      target="_blank"
+                      >Live Demo</a
+                    >
+                  </div>
+                </div>
+              </div>
+              <!-- Project 4 -->
+              <div class="carousel-item active">
+                <div class="card bg-secondary text-light shadow-lg">
+                  <img
+                    src="./img/financial-advisor.png"
+                    class="card-img-top"
+                    alt="Financial advisor landing page"
+                  />
+                  <div class="card-body text-center">
+                    <h5 class="card-title">Financial Advisor</h5>
+                    <p class="card-text">
+                      A sleek, responsive page with a fixed navbar, service
+                      carousel, and mobile-friendly design, built with Bootstrap,
+                      CSS, and JavaScript.
+                    </p>
+                    <a
+                      href="https://github.com/roddazad/personal-banker"
+                      class="btn btn-outline-info"
+                      target="_blank"
+                      >View Code</a
+                    >
+                    <a
+                      href="https://roddazad.github.io/personal-banker/"
+                      class="btn btn-outline-light"
+                      target="_blank"
+                      >Live Demo</a
+                    >
+                  </div>
+                </div>
+              </div>
+                </div>
+            </div>
+        </div>
+     </section>
     <!-- Skills Section -->
     <!-- Resume Section -->
     <!-- Contact Section -->
