--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
      </section>
 
     <!-- Project Section -->
-     <section class="py-5 bg-dark text-light">
+     <section id="projects" class="py-5 bg-dark text-light">
         <div class="container">
             <h2 class="display-5 fw-bold text-center mb-4">Projects</h2>
             <div id="projectsCarousel" class="carousel slide" data-bs-ride="carousel">
@@ -142,7 +142,7 @@
               <div class="carousel-item">
                 <div class="card bg-secondary text-light shadow-lg">
                   <img
-                    src="./img/shopping.png"
+                    src="./img/shopEase.png"
                     class="card-img-top"
                     alt="ShopEase Project"
                   />
@@ -198,12 +198,122 @@
                 </div>
               </div>
                 </div>
+                <!-- Carousel Controls -->
+                 <button class="carousel-control-prev" type="button" data-bs-target="#projectsCarousel" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                 </button>
+                 <button
+                 class="carousel-control-next"
+                 type="button"
+                 data-bs-target="#projectsCarousel"
+                 data-bs-slide="next"
+               >
+                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                 <span class="visually-hidden">Next</span>
+               </button>
             </div>
         </div>
      </section>
+
     <!-- Skills Section -->
+     <section class="py-5 bg-dark text-light">
+        <div class="container">
+            <h2 class="display-5 fw-bold text-center mb-4">Skills</h2>
+            <p class="text-center lead mb-5">Technologies & Tools I Work With</p>
+            <div class="row text-center">
+                <!-- Skill 1: HTML -->
+                 <div class="col-md-6 col-lg-3 mb-4">
+                    <a href="https://developer.mozilla.org/en-US/docs/Web/HTML" class="text-decoration-none" target="_blank">
+                        <div class="card bg-secondary text-light shadow-lg py-3 skill-card">
+                            <img src="./img/html.png" alt="HTML LOGO" class="img-fluid mx-auto d-block" width="80">
+                            <h5 class="mt-3">HTML</h5>
+                        </div>
+                    </a>
+
+                 </div>
+                 <!-- Skill 2: CSS3 -->
+          <div class="col-md-6 col-lg-3 mb-4">
+            <a
+              href="https://developer.mozilla.org/en-US/docs/Web/CSS"
+              target="_blank"
+              class="text-decoration-none"
+            >
+              <div
+                class="card bg-secondary text-light shadow-lg py-3 skill-card"
+              >
+                <img
+                  src="./img/css.png"
+                  alt="CSS3"
+                  class="img-fluid mx-auto d-block"
+                  width="80"
+                />
+                <h5 class="mt-3">CSS3</h5>
+              </div>
+            </a>
+          </div>
+
+          <!-- Skill 3: JavaScript -->
+          <div class="col-md-6 col-lg-3 mb-4">
+            <a
+              href="https://developer.mozilla.org/en-US/docs/Web/JavaScript"
+              target="_blank"
+              class="text-decoration-none"
+            >
+              <div
+                class="card bg-secondary text-light shadow-lg py-3 skill-card"
+              >
+                <img
+                  src="./img/js.png"
+                  alt="JavaScript"
+                  class="img-fluid mx-auto d-block"
+                  width="80"
+                />
+                <h5 class="mt-3">JavaScript</h5>
+              </div>
+            </a>
+          </div>
+
+          <!-- Skill 4: Bootstrap -->
+          <div class="col-md-6 col-lg-3 mb-4">
+            <a
+              href="https://getbootstrap.com/"
+              target="_blank"
+              class="text-decoration-none"
+            >
+              <div
+                class="card bg-secondary text-light shadow-lg py-3 skill-card"
+              >
+                <img
+                  src="./img/bootstrap.png"
+                  alt="Bootstrap"
+                  class="img-fluid mx-auto d-block"
+                  width="80"
+                />
+                <h5 class="mt-3">Bootstrap</h5>
+              </div>
+            </a>
+          </div>
+            </div>
+        </div>
+     </section>
+
     <!-- Resume Section -->
+     <section class="py-5 bg-dark text-light">
+        <div class="container text-center">
+            <h2 class="display-5 fw-bold mb-4">My Resume</h2>
+            <p class="lead mb-4">Take a look at my experience and skills in detail</p>
+            <!-- View Resume Button -->
+             <a href="./other/rodd-resume.pdf" class="btn btn-outline-info mb-4" target="_blank"><i class="fas fa-file-pdf"></i> View Resume</a>
+             <!-- Resume Preview -->
+              <div class="resume-preview d-none d-md-block">
+                <iframe src="./other/rodd-resume.pdf" width="100%" height="500px"></iframe>
+              </div>
+        </div>
+     </section>
+
     <!-- Contact Section -->
+     
     <!-- Footer Section -->
     <!-- Scripts -->
     <script
