--- a/index.html
+++ b/index.html
@@ -313,8 +313,44 @@
      </section>
 
     <!-- Contact Section -->
-     
+     <section class="py-5 bg-dark text-light">
+        <div class="container text-center">
+            <h2 class="display-5 fw-bold md-4">Get in Touch</h2>
+            <p class="lead mb-4">Let's connect! Reach out via email or find me on social media.</p>
+            <!-- Email Link -->
+             <p><a href="mailto:roddazad@gmail.com" class="text-info fs-4">roddazad@gmail.com</a></p>
+            <!-- Social Media Links -->
+             <div class="mt-4">
+                <a href="https://www.linkedin.com/in/roddazad/" class="text-info mx-3" target="_blank">
+                    <i class="fa-brands fa-linkedin fa-2x"></i>
+                </a>
+                <a
+                href="https://github.com/roddazad"
+                class="text-info mx-3"
+                target="_blank"
+              >
+                <i class="fa-brands fa-github fa-2x"></i>
+              </a>
+              <a
+              href="https://twitter.com/yourhandle"
+              class="text-info mx-3"
+              target="_blank"
+            >
+              <i class="fa-brands fa-twitter fa-2x"></i>
+            </a>
+
+             </div> 
+        </div>
+     </section>
+
     <!-- Footer Section -->
+    <footer class="bg-dark text-light py-4">
+        <div class="container text-center">
+            <hr class="border-secondary my-3">
+            <p class="mb-0">&copy; <span id="current-year"></span> Rodd Azad. All rights reserved.
+            </p>
+        </div>
+    </footer>
     <!-- Scripts -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
