--- a/index.html
+++ b/index.html
@@ -30,12 +30,22 @@
             <!-- Navbar Items -->
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a href="#about" class="nav-link">About Me</a></li>
-                    <li class="nav-item"><a href="#projects" class="nav-link">Projects</a></li>
-                    <li class="nav-item"><a href="#skills" class="nav-link">Skills</a></li>
-                    <li class="nav-item"><a href="#resume" class="nav-link">Resume</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
-                </ul>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#about-me">About Me</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#projects">Projects</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#skills">Skills</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#resume">Resume</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#contact">Contact</a>
+                    </li>
+                  </ul>
             </div>
         </div>
      </nav>
@@ -54,7 +64,7 @@
      </header>
 
     <!-- About Section -->
-     <section class="py-5 bg-dark text-light">
+     <section id="about-me" class="py-5 bg-dark text-light">
         <div class="container">
           <div class="row">
             <div class="col-lg-12">
@@ -217,7 +227,7 @@
      </section>
 
     <!-- Skills Section -->
-     <section class="py-5 bg-dark text-light">
+     <section id="skills" class="py-5 bg-dark text-light">
         <div class="container">
             <h2 class="display-5 fw-bold text-center mb-4">Skills</h2>
             <p class="text-center lead mb-5">Technologies & Tools I Work With</p>
@@ -299,7 +309,7 @@
      </section>
 
     <!-- Resume Section -->
-     <section class="py-5 bg-dark text-light">
+     <section id="resume" class="py-5 bg-dark text-light">
         <div class="container text-center">
             <h2 class="display-5 fw-bold mb-4">My Resume</h2>
             <p class="lead mb-4">Take a look at my experience and skills in detail</p>
@@ -313,7 +323,7 @@
      </section>
 
     <!-- Contact Section -->
-     <section class="py-5 bg-dark text-light">
+     <section id="contact" class="py-5 bg-dark text-light">
         <div class="container text-center">
             <h2 class="display-5 fw-bold md-4">Get in Touch</h2>
             <p class="lead mb-4">Let's connect! Reach out via email or find me on social media.</p>
