modified the about section

--- a/index.html
+++ b/index.html
@@ -71,21 +71,14 @@
                 <h2 class="display-5 fw-bold text-center">About Me</h2>
                 <p class="lead">
                     I'm Rodd Azad, a results-driven
-                    <strong>Full-stack Developer & Innovator</strong> with a solid
-                    background in software engineering, web development, and
-                    operations management. With over five years of experience in web
-                    technologies and AI integration, I specialize in building
-                    scalable, intelligent web solutions that enhance user experience
-                    and efficiency.
+                    <strong>Full-stack Developer & Innovator</strong> with a passion for transforming complex challenges into scalable, intelligent web solutions. With a robust background in software engineering, web development, and operations management, I bring over five years of hands-on experience in leveraging modern web technologies and AI integration to enhance user experience and drive business efficiency.
                 </p>
-                <p>
-                    My journey started in <strong>Operations Management</strong>,
-                    leading teams and optimizing workflows. Transitioning into tech, I
-                    founded <strong>Coded Pro</strong>, a web development company
-                    focused on scalable digital solutions. Now, I leverage my
-                    technical expertise and leadership skills to develop impactful web
-                    applications.
+                <p class="lead">
+                    My professional journey began in operations management, where I honed my leadership skills by directing teams and optimizing workflows. This early experience instilled in me a deep appreciation for process excellence and strategic thinking—qualities that have been instrumental in my transition to the tech world. Recognizing the immense potential of digital innovation, I co-founded Coded Pro, a web development company dedicated to delivering scalable, future-proof digital solutions. At Coded Pro, I collaborate with a talented team of developers and creative minds, pushing the boundaries of what’s possible by combining technical expertise with a visionary approach.
                   </p>
+                  <p class="lead">I specialize in architecting high-performance web applications that not only address current market demands but also anticipate future trends. Whether it's developing dynamic single-page applications or integrating advanced AI features, my goal is to create impactful solutions that seamlessly merge functionality with user-centric design. Beyond project development, I am an advocate for continuous learning and open-source collaboration, regularly engaging with the tech community through conferences, workshops, and meetups.</p>
+                  <p class="lead">On the personal front, family is at the heart of everything I do. I am a devoted husband and proud father to a lively nine-year-old son. My wife, son, and I make it a point to spend quality time together—whether it's our weekly trips to the library, engaging in board games like chess and backgammon, or even sharing bouts of jiu-jitsu wrestling. This balance of professional ambition and personal joy fuels my drive to create solutions that not only innovate but also enrich the lives of those around me.</p>
+                  <p class="lead">Every project I undertake is driven by a commitment to excellence, innovation, and operational efficiency. I believe that when technical expertise meets strategic leadership and a well-rounded life, truly transformative solutions are born. My mission is to empower businesses to navigate the digital landscape with confidence and agility, ensuring that technology serves as a catalyst for sustainable growth and success.</p>
                   <div class="text-center"><a
                     href="./other/rodd-resume.pdf"
                     class="btn btn-outline-info mt-3"
