updated the resume file

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                   <p class="lead">On the personal front, family is at the heart of everything I do. I am a devoted husband and proud father to a lively nine-year-old son. My wife, son, and I make it a point to spend quality time together—whether it's our weekly trips to the library, engaging in board games like chess and backgammon, or even sharing bouts of jiu-jitsu wrestling. This balance of professional ambition and personal joy fuels my drive to create solutions that not only innovate but also enrich the lives of those around me.</p>
                   <p class="lead">Every project I undertake is driven by a commitment to excellence, innovation, and operational efficiency. I believe that when technical expertise meets strategic leadership and a well-rounded life, truly transformative solutions are born. My mission is to empower businesses to navigate the digital landscape with confidence and agility, ensuring that technology serves as a catalyst for sustainable growth and success.</p>
                   <div class="text-center"><a
-                    href="./other/rodd-resume.pdf"
+                    href="./other/fullstack.pdf"
                     class="btn btn-outline-info mt-3"
                     target="_blank"
                   >
@@ -307,10 +307,10 @@
             <h2 class="display-5 fw-bold mb-4">My Resume</h2>
             <p class="lead mb-4">Take a look at my experience and skills in detail</p>
             <!-- View Resume Button -->
-             <a href="./other/rodd-resume.pdf" class="btn btn-outline-info mb-4" target="_blank"><i class="fas fa-file-pdf"></i> View Resume</a>
+             <a href="./other/fullstack.pdf" class="btn btn-outline-info mb-4" target="_blank"><i class="fas fa-file-pdf"></i> View Resume</a>
              <!-- Resume Preview -->
               <div class="resume-preview d-none d-md-block">
-                <iframe src="./other/rodd-resume.pdf" width="100%" height="500px"></iframe>
+                <iframe src="./other/fullstack.pdf" width="100%" height="500px"></iframe>
               </div>
         </div>
      </section>
