updated the links to the live demo and code for the piano project

--- a/index.html
+++ b/index.html
@@ -126,13 +126,13 @@
                       all levels.
                     </p>
                     <a
-                      href="https://codesandbox.io/p/sandbox/nrvggr"
+                      href="https://github.com/roddazad/piano-teacher"
                       class="btn btn-outline-info"
                       target="_blank"
                       >View Code</a
                     >
                     <a
-                      href="https://nrvggr.csb.app/index.html"
+                      href="https://roddazad.github.io/piano-teacher/"
                       class="btn btn-outline-light"
                       target="_blank"
                       >Live Demo</a
