updated the project section with my new project mediterranean delight

--- a/index.html
+++ b/index.html
@@ -101,13 +101,12 @@
                     <!-- Project 1 -->
                      <div class="carousel-item">
                         <div class="card bg-secondary text-light shadow-lg">
-                            <img src="./img/movietime.png" alt="Movie lookup project" class="card-img-top">
+                            <img src="./img/mediterranean-delight.png" alt="Mediterranean Restaurant" class="card-img-top">
                             <div class="card-body text-center">
-                                <h5 class="card-title">Movie Time</h5>
-                                <p class="card-text">Search for movies and instantly access information,
-                                    including cast, reviews, and plot details.</p>
-                                    <a href="https://github.com/vanwykkim/movie-lookup" class="btn btn-outline-info" target="blank"> View Code</a>
-                                    <a href="https://vanwykkim.github.io/movie-lookup/" class="btn btn-outline-light" target="_blank"> Live Demo</a>
+                                <h5 class="card-title">Mediterranean Delight</h5>
+                                <p class="card-text">A fully responsive site for a fictitious Mediterranean restaurant, featuring an interactive homepage carousel, a rich about page, and a well-organized menu page. Built with HTML, CSS, and Bootstrap 5, this project highlights my front-end development skills and keen design sense.</p>
+                                    <a href="https://github.com/roddazad/mediterranean-delight" class="btn btn-outline-info" target="blank"> View Code</a>
+                                    <a href="https://roddazad.github.io/mediterranean-delight/" class="btn btn-outline-light" target="_blank"> Live Demo</a>
                             </div>
                         </div>
                      </div>
