Updated the h5 and p tag for three of the carousel items

--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
                         <div class="card bg-secondary text-light shadow-lg">
                             <img src="./img/mediterranean-delight.png" alt="Mediterranean Restaurant" class="card-img-top">
                             <div class="card-body text-center">
-                                <h5 class="card-title">Mediterranean Delight</h5>
-                                <p class="card-text">A fully responsive site for a fictitious Mediterranean restaurant, featuring an interactive homepage carousel, a rich about page, and a well-organized menu page. Built with HTML, CSS, and Bootstrap 5, this project highlights my front-end development skills and keen design sense.</p>
+                                <h5 class="card-title">Mediterranean Delight – A Taste of the Mediterranean Experience</h5>
+                                <p class="card-text">Mediterranean Delight is a visually stunning, responsive restaurant website built with HTML, CSS, Bootstrap, and JavaScript, offering an immersive online experience for a Mediterranean dining establishment. Featuring an elegant hero section, interactive carousel showcasing specialties, a structured menu page with appetizing imagery, and a reservation modal for seamless booking, this project blends aesthetics with functionality. With a rich, Mediterranean-inspired design, intuitive navigation, embedded Google Maps integration, and a dedicated "About Us" section highlighting the restaurant's story and philosophy, this website showcases my skills in front-end web development, responsive design, and user-friendly UI/UX experiences.</p>
                                     <a href="https://github.com/roddazad/mediterranean-delight" class="btn btn-outline-info" target="blank"> View Code</a>
                                     <a href="https://roddazad.github.io/mediterranean-delight/" class="btn btn-outline-light" target="_blank"> Live Demo</a>
                             </div>
@@ -119,10 +119,10 @@
                     alt="Piano Lesson Project"
                   />
                   <div class="card-body text-center">
-                    <h5 class="card-title">Piano Lesson</h5>
+                    <h5 class="card-title">Piano Wonderland - Bilingual Piano Lessons Website 🎹
+                    </h5>
                     <p class="card-text">
-                      A dedicated website promoting piano lessons for students of
-                      all levels.
+                      Piano Wonderland is a bilingual (English & Persian) piano lessons website for Mohammad Erfanian, built with HTML, CSS,and Bootstrap. It features seamless language switching, a dynamic service carousel, collapsible content sections, and an elegant dark-themed design. The site highlights beginner to advanced piano lessons, music theory, and performance coaching, with a contact section for easy accessibility. This project showcases my skills in responsive web development, multilingual site implementation, and UI/UX design.
                     </p>
                     <a
                       href="https://github.com/roddazad/piano-teacher"
@@ -178,11 +178,9 @@
                     alt="Financial advisor landing page"
                   />
                   <div class="card-body text-center">
-                    <h5 class="card-title">Financial Advisor</h5>
+                    <h5 class="card-title"> Financial Consulting Website</h5>
                     <p class="card-text">
-                      A sleek, responsive page with a fixed navbar, service
-                      carousel, and mobile-friendly design, built with Bootstrap,
-                      CSS, and JavaScript.
+                      Financial Consulting Website is a modern, responsive financial services platform designed to showcase personalized wealth management, retirement planning, debt consolidation, and home financing solutions. Built with HTML, CSS, Bootstrap, and JavaScript, the site features a professional hero section, dynamic service carousel, collapsible content sections, and a structured contact form for seamless user interaction. Its clean UI/UX, mobile-friendly navigation, and elegant dark-themed design ensure a polished and accessible experience, demonstrating my expertise in front-end web development, responsive design, and interactive UI elements.
                     </p>
                     <a
                       href="https://github.com/roddazad/personal-banker"
