updated the portfolio with a new project

--- a/index.html
+++ b/index.html
@@ -144,24 +144,23 @@
               <div class="carousel-item">
                 <div class="card bg-secondary text-light shadow-lg">
                   <img
-                    src="./img/shopEase.png"
+                    src="./img/travelGo.png"
                     class="card-img-top"
                     alt="ShopEase Project"
                   />
                   <div class="card-body text-center">
-                    <h5 class="card-title">ShopEase</h5>
+                    <h5 class="card-title">TravelGo - Interactive Travel Booking Website</h5>
                     <p class="card-text">
-                      A hassle-free shopping experience with secure, effortless
-                      browsing.
+                      TravelGo is a responsive travel booking website built with HTML, CSS, and Bootstrap, offering a seamless user experience for exploring destinations, booking travel packages, and making inquiries. It features a hero section, featured destinations, and curated packages, along with an About Us and Contact Page with Google Maps integration. Designed with modern UI elements, carousels, and dynamic cards, it ensures smooth functionality across all devices. This project showcases expertise in front-end development, UI/UX design, and responsive web design with a clean, maintainable codebase.
                     </p>
                     <a
-                      href="https://codesandbox.io/p/sandbox/mks5nx"
+                      href="https://github.com/roddazad/travel-destination-website"
                       class="btn btn-outline-info"
                       target="_blank"
                       >View Code</a
                     >
                     <a
-                      href="https://mks5nx.csb.app/index.html"
+                      href="https://roddazad.github.io/travel-destination-website/"
                       class="btn btn-outline-light"
                       target="_blank"
                       >Live Demo</a
