--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
         />
       </head>
-<body>
+<body class="bg-dark">
 
     <!-- Navbar  -->
      <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
@@ -80,7 +80,7 @@
             </div>
         </div>
     </section>
-    
+
        <!-- Projects Section --> 
     <section id="projects" class="py-5 bg-dark text-light">
       <div class="container">
@@ -177,6 +177,10 @@
           </div>
       </div>
   </section>
+
+  <div class="text-center mt-4">
+    <a href="projects.html" class="btn btn-outline-info btn-lg">View More Projects</a>
+</div>
     
 
 
