added a new project to the carousel and project.html

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
           <div id="projectsCarousel" class="carousel slide" data-bs-ride="carousel">
               <div class="carousel-inner">
                   <!-- Project 1 -->
-                  <div class="carousel-item active">
+                  <div class="carousel-item">
                       <div class="card bg-secondary text-light shadow-lg">
                           <img src="./img/mediterranean-delight.png" alt="Mediterranean Restaurant" class="card-img-top">
                           <div class="card-body text-center">
@@ -142,19 +142,19 @@
                       </div>
                   </div>
                   <!-- Project 4 -->
-                  <div class="carousel-item">
+                  <div class="carousel-item active">
                       <div class="card bg-secondary text-light shadow-lg">
-                          <img src="./img/financial-advisor.png" class="card-img-top" alt="Financial Consulting Website" />
+                          <img src="./img/movieSearch.png" class="card-img-top" alt="Financial Consulting Website" />
                           <div class="card-body text-center">
-                              <h5 class="card-title">Financial Consulting Website</h5>
-                              <p class="card-text">A modern, responsive financial services platform...</p>
+                              <h5 class="card-title">🎬 Movie Search App.</h5>
+                              <p class="card-text">Discover, Track, and Save Your Favorite Films with Ease!...</p>
                               <div class="collapse" id="financeDetails">
-                                  <p class="card-text">Financial Consulting Website is a modern, responsive financial services platform designed to showcase personalized wealth management, retirement planning, and debt consolidation solutions.</p>
+                                  <p class="card-text">The Movie Search App is a dynamic and responsive web application that allows users to search for movies, explore trending and classic films, and manage a personal watchlist. Built with HTML, CSS, JavaScript, and Bootstrap, and powered by The Movie Database (TMDb) API, the app delivers real-time movie data with an intuitive and engaging UI. Users can instantly search for any movie, browse trending and classic films by decade, and save favorites to a watchlist using Local Storage, with the option to remove them at any time. The app features a cinema-style dark mode, smooth animations, and responsive design, ensuring a seamless user experience. Planned future enhancements include a Movie Details Page, allowing users to click on a result to see detailed information like cast, ratings, and description, along with genre-based filtering and user authentication for cross-device watchlist syncing. This project showcases my front-end development skills, including API integration, UI/UX design, and state management, demonstrating my ability to create interactive and user-friendly web applications. 🚀🎬</p>
                               </div>
                               <div class="d-flex justify-content-center gap-2 mt-2">
                               <button class="btn btn-outline-info mt-2" type="button" data-bs-toggle="collapse" data-bs-target="#financeDetails" aria-expanded="false">See Details</button>
-                              <a href="https://github.com/roddazad/personal-banker" class="btn btn-outline-info mt-2" target="_blank">View Code</a>
-                              <a href="https://roddazad.github.io/personal-banker/" class="btn btn-outline-light mt-2" target="_blank">Live Demo</a>
+                              <a href="https://github.com/roddazad/movie-search" class="btn btn-outline-info mt-2" target="_blank">View Code</a>
+                              <a href="https://roddazad.github.io/movie-search/" class="btn btn-outline-light mt-2" target="_blank">Live Demo</a>
                             </div>
                           </div>
                       </div>
